--- a/practical/Practical-02-Foundations_1.ipynb
+++ b/practical/Practical-02-Foundations_1.ipynb
@@ -1273,6 +1273,26 @@
     "[GitHub](https://github.com/) and see that your changes are now stored\n",
     "there as well!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "dd4757a1-1975-4d9a-bc62-5093e51fdc4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 3.1415 \n",
+    "from math import pi  #from math import pi 会覆盖你自己写的 pi\n",
+    "print(pi)"
+   ]
   }
  ],
  "metadata": {
