--- a/practical/Practical-05-Objects.ipynb
+++ b/practical/Practical-05-Objects.ipynb
@@ -553,9 +553,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "896cf6f3-fb78-42e5-9e41-8462fadf88ad",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f865a3b2-9eaf-46e0-899e-26d525035db8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "#上文代码的完整版：\n",
     "import os\n",
@@ -591,9 +593,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b91c61b2-4ae2-4498-b24e-3206845a4bd0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57956ea2-7e97-4ff0-a693-2facaca6a343",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# 这个函数实现了“智能下载”功能：如果本地已经有文件，则跳过；如果没有，则从 URL 下载并保存到正确的文件夹中。\n",
     "\n",
@@ -717,9 +721,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e89a7267-2299-4483-bb8a-816bb6a8a7ae",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14b39f02-e432-4ec4-b878-4de1d4cf43a8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# 便于理解\n",
     "\n",
@@ -1388,9 +1394,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "49003cb4-bdc4-44e7-844b-99418e91fadf",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56027a0-a09f-42db-9408-bdb908c8f386",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# 举一反三一个叭~\n",
     "f3 = Flat('Room With an Excellent View', 157.00, 0, 2,)\n",
@@ -1584,7 +1592,11 @@
    "cell_type": "code",
    "execution_count": 161,
    "id": "f7bd259e-dbf1-4944-8484-c958f03288f2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1628,8 +1640,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a9f02986-5014-4fbd-b2c9-197e5478abf6",
+   "cell_type": "raw",
+   "id": "bdba5c60-f435-4988-a0dd-c8e0bec7fc1b",
    "metadata": {},
    "source": [
     "# 完整的全部代码如下\n",
