--- a/practical/Practical-05-Objects.ipynb
+++ b/practical/Practical-05-Objects.ipynb
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "id": "5b1f29d3",
    "metadata": {},
    "outputs": [],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "d6c22f6e-9e03-4d98-9565-b8935f033966",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/Listings.csv *not* found!\n"
+      "data/Listings.csv found!\n"
      ]
     }
    ],
@@ -554,10 +554,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f865a3b2-9eaf-46e0-899e-26d525035db8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/Listings.csv found!\n"
+     ]
+    }
+   ],
    "source": [
     "#上文代码的完整版：\n",
     "import os\n",
@@ -594,10 +602,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "57956ea2-7e97-4ff0-a693-2facaca6a343",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/Listings.csv found locally!\n"
+     ]
+    }
+   ],
    "source": [
     "# 这个函数实现了“智能下载”功能：如果本地已经有文件，则跳过；如果没有，则从 URL 下载并保存到正确的文件夹中。\n",
     "\n",
@@ -617,7 +633,7 @@
     "        # Extract the part of the dest(ination) that is *not*\n",
     "        # the actual filename--have a look at how \n",
     "        # os.path.split works using `help(os.path.split)`           # 表示将 dest 分成两个部分：1文件夹路径和2文件名\n",
-    "        path = list(os.path.split(dest)[:-1])         # 例如 dest = \"data/Listings.csv\"，则os.path.split(dest) → (\"data\", \"Listings.csv\")；而[:-1] 表示取前面的 \"data\"\n",
+    "        path = list(os.path.split(dest)[:-1])         # 例如 dest = \"data/Listings.csv\"，则os.path.split(dest) → (\"data\", \"Listings.csv\")；而[:-1] 表示（提取除了最后一个元素以外的所有元素），即取前面的 \"data\"\n",
     "\n",
     "        \n",
     "        # Create any missing directories in dest(ination) path\n",
@@ -625,8 +641,11 @@
     "        # but it doesn't work with lists... so I had to google how \n",
     "        # to use the 'splat' operator! os.makedirs creates missing \n",
     "        # directories in a path automatically.\n",
-    "        if len(path) >= 1 and path[0] != '':                        # 判断 path 是否是一个有效文件夹名字\n",
-    "            os.makedirs(os.path.join(*path), exist_ok=True)\n",
+    "        if len(path) >= 1 and path[0] != '':                        # 判断 path 是否是一个有效的文件夹名字\n",
+    "            os.makedirs(os.path.join(*path), exist_ok=True)       # 把 path 里的目录合并成操作系统路径。//*path = 拆包，把列表变成多个参数。\n",
+    "                                                                #  os.makedirs:创建目录（包括多级目录）(例如os.makedirs('data/raw/2025') → 一次性创建整个路径)\n",
+    "                                                               # exist_ok=True：允许目录已经存在，不会报错。\n",
+    "        \n",
     "        \n",
     "        with open(dest, 'w') as f:                     # 打开 dest 指定的文件路径，用 'w' 写入模式\n",
     "            f.write(filedata)                         # 将下载的数据写入本地 CSV 文件。\n",
@@ -659,25 +678,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "eed4796b",
+   "execution_count": 14,
+   "id": "501f9574-5216-4af6-ace9-c5aff5b30ba1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/Listings.csv not found, downloading!\n",
-      "Data written to data/Listings.csv!\n",
+      "data/Listings.csv found locally!\n",
       "data/Listings.csv is a <class 'str'>.\n"
      ]
     }
    ],
    "source": [
     "from functools import wraps\n",
+    "\n",
     "def check_cache(f):\n",
     "    @wraps(f)\n",
-    "    def wrapper(*args, **kwargs):\n",
+    "    def wrapper(*args, **kwargs): # here *args is used, so instead of the return value of get_url, the arguments of get_url is passed into here.\n",
+    "# 有时装饰器函数无法控制从装饰函数传递的参数，为了解决这个问题，请添加 （*args， **kwargs） 到包装函数，这样包装函数可以接受任何数字和任何类型的参数，并将它们传递给装饰函数。\n",
+    "        \n",
     "        src  = args[0]\n",
     "        dest = args[1]\n",
     "        if os.path.isfile(dest):\n",
@@ -711,7 +732,6 @@
     "        f.write(filedata)\n",
     "         \n",
     "    print(f\"Data written to {dest}!\")\n",
-    "    \n",
     "    return dest\n",
     "        \n",
     "# Using the `return contents` line we make it easy to \n",
@@ -722,10 +742,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "eed4796b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function get_url at 0x74dac8379a80>\n",
+      "data/Listings.csv found locally!\n",
+      "data/Listings.csv is a <class 'str'>.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 尝试解释包装中的包装//多个包装\n",
+    "from functools import wraps\n",
+    "\n",
+    "def new_decorator(f):\n",
+    "    @wraps(f)\n",
+    "    def wrapper:\n",
+    "        return\n",
+    "    return\n",
+    "\n",
+    "def check_cache(f):\n",
+    "    @wraps(f)\n",
+    "    def wrapper(*args, **kwargs): # here *args is used, so instead of the return value of get_url, the arguments of get_url is passed into here.\n",
+    "        src  = args[0]\n",
+    "        dest = args[1]\n",
+    "        if os.path.isfile(dest):\n",
+    "            print(f\"{dest} found locally!\")\n",
+    "            return(dest)\n",
+    "        else:\n",
+    "            print(f\"{dest} not found, downloading!\")\n",
+    "            return(f(src, dest))\n",
+    "    return wrapper\n",
+    "\n",
+    "@new_decorator\n",
+    "@check_cache\n",
+    "def get_url(src, dest):    \n",
+    "    # Get the data using the urlopen function\n",
+    "    response = urlopen(src) \n",
+    "    filedata = response.read().decode('utf-8')\n",
+    "     \n",
+    "    # Extract the part of the dest(ination) that is *not*\n",
+    "    # the actual filename--have a look at how \n",
+    "    # os.path.split works using `help(os.path.split)`\n",
+    "    path = list(os.path.split(dest)[:-1])\n",
+    "     \n",
+    "    # Create any missing directories in dest(ination) path\n",
+    "    # -- os.path.join is the reverse of split (as you saw above)\n",
+    "    # but it doesn't work with lists... so I had to google how \n",
+    "    # to use the 'splat' operator! os.makedirs creates missing \n",
+    "    # directories in a path automatically.\n",
+    "    if len(path) >= 1 and path[0] != '':\n",
+    "        os.makedirs(os.path.join(*path), exist_ok=True)\n",
+    "     \n",
+    "    with open(dest, 'w') as f:\n",
+    "        f.write(filedata)\n",
+    "         \n",
+    "    print(f\"Data written to {dest}!\")\n",
+    "    return dest\n",
+    "        \n",
+    "# Using the `return contents` line we make it easy to \n",
+    "# see what our function is up to.\n",
+    "src = get_url(url, out)\n",
+    "print(f\"{src} is a {type(src)}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "14b39f02-e432-4ec4-b878-4de1d4cf43a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<string>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mFile \u001b[39m\u001b[32m<string>:6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31margs[0] args[1]\u001b[39m\n                   ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "# 便于理解\n",
     "\n",
