--- a/practical/Practical-03-Foundations_2.ipynb
+++ b/practical/Practical-03-Foundations_2.ipynb
@@ -977,6 +977,687 @@
     "Now follow the same process that you used last week to ensure that your\n",
     "edited notebook is updated in Git and then synchronised with GitHub."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0df227e8-b2a6-4eeb-a4b0-2dfad95f788b",
+   "metadata": {},
+   "source": [
+    "# Updated Review (practice with video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b0455be7-b307-4b3c-9113-a30a27bc35c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List 用[]包住 元素用，分隔\n",
+    "cities = [\n",
+    "    'San Francisco',\n",
+    "    'London',\n",
+    "    'Paris',\n",
+    "    'Beijing'\n",
+    "]\n",
+    "\n",
+    "# Prints London\n",
+    "print(cities[1]) #取位置"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2908b510-710e-434f-8c22-7320c570400a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8673713\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dict 用{}包住 元素用，分隔\n",
+    "cities = {\n",
+    "    'San Francisco': 837442,\n",
+    "    'London': 8673713,\n",
+    "    'Paris': 837442,\n",
+    "    'Beijing': 17000000\n",
+    "}\n",
+    "\n",
+    "# Prints population of London\n",
+    "print(cities['London']) #取元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8291621c-c5ba-4084-a737-a971e7a73af7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Sao Paulo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Dict\u001b[39;00m\n\u001b[32m      2\u001b[39m cities = {\n\u001b[32m      3\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mSan Francisco\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m837442\u001b[39m,\n\u001b[32m      4\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mLondon\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m8673713\u001b[39m,\n\u001b[32m      5\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mParis\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m837442\u001b[39m,\n\u001b[32m      6\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mBeijing\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m0.1700000\u001b[39m\n\u001b[32m      7\u001b[39m }\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcities\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSao Paulo\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m)          \u001b[38;5;66;03m# Throws KeyError\u001b[39;00m\n",
+      "\u001b[31mKeyError\u001b[39m: 'Sao Paulo'"
+     ]
+    }
+   ],
+   "source": [
+    "# Dict 用[] 直接取值——报错\n",
+    "cities = {\n",
+    "    'San Francisco': 837442,\n",
+    "    'London': 8673713,\n",
+    "    'Paris': 837442,\n",
+    "    'Beijing': 0.1700000\n",
+    "}\n",
+    "\n",
+    "print(cities['Sao Paulo'])          # Throws KeyError\n",
+    "# key不存在，直接报错KeyError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bfd96a3b-cad2-4e47-b3aa-f330532ac6bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 用 .get()取值——不报错\n",
+    "print(cities.get('Sao Paulo'))      # Returns None\n",
+    "# key不存在，返回 None （不报错）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "21834472-4310-421c-bbc5-606edbc6d528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Data\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.get('Sao Paulo', 'No Data'))   # Returns 'No Data'\n",
+    "# key不存在，返回 默认值 （不报错）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6d8dab4a-fc5b-4968-9e98-feddba014b23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry,no city by that name.\n",
+      "Found Beijing!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in\n",
+    "cities = {\n",
+    "    'San Francisco': 837442,\n",
+    "    'London': 8673713,\n",
+    "    'Paris': 837442,\n",
+    "    'Beijing': 0.1700000\n",
+    "}\n",
+    "\n",
+    "c = cities.get('Sao Paulo')\n",
+    "if not c:\n",
+    "    print('Sorry,no city by that name.')\n",
+    "\n",
+    "if 'Beijing' in cities:\n",
+    "    print('Found Beijing!')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4c0767a2-ea43-4fd1-86f5-a372f0e7b39b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2930000\n",
+      "{'Beijing': 21710662}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 给 Dict 加入添加、更改、删除  key\n",
+    "cities = {}                 # empty dictionary\n",
+    "cities['Beijing'] = 21710662     # set key -> value\n",
+    "cities['Toronto'] = 2930000      #set key -> value\n",
+    "\n",
+    "\n",
+    "print(cities['Toronto'])    # print key\n",
+    "#del cities['Toronto']   # del(delete) Toronto key and value\n",
+    "cities.pop('Toronto', 'Default')  # 因为 Toronto 不存在，返回 'Default'\n",
+    "\n",
+    "\n",
+    "#cities['Beijing'] = 16620   # 更新旧值，覆盖\n",
+    "print(cities)  #output final list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1bc43bc4-4df6-4b4b-a96e-38b64c192e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Beijing': 21710662}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 验证\n",
+    "cities = {}                 # empty dictionary\n",
+    "cities['Beijing'] = 21710662     # set key -> value\n",
+    "cities['Toronto'] = 2930000      # set key -> value\n",
+    "\n",
+    "del cities['Toronto']   # del(delete) Toronto key and value\n",
+    "#cities.pop('Toronto', 'Default')  # 因为 Toronto 不存在，返回 'Default'\n",
+    "\n",
+    "print(cities) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d66dc198-d529-4c95-ba56-a62fde995f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Toronto'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[60]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m cities[\u001b[33m'\u001b[39m\u001b[33mToronto\u001b[39m\u001b[33m'\u001b[39m] = \u001b[32m2930000\u001b[39m      \u001b[38;5;66;03m# set key -> value\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m cities[\u001b[33m'\u001b[39m\u001b[33mToronto\u001b[39m\u001b[33m'\u001b[39m]   \u001b[38;5;66;03m# del(delete) Toronto key and value\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[43mcities\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mToronto\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 因为 Toronto 不存在\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(cities) \n",
+      "\u001b[31mKeyError\u001b[39m: 'Toronto'"
+     ]
+    }
+   ],
+   "source": [
+    "# 验证\n",
+    "cities = {}                 # empty dictionary\n",
+    "cities['Beijing'] = 21710662     # set key -> value\n",
+    "cities['Toronto'] = 2930000      # set key -> value\n",
+    "\n",
+    "del cities['Toronto']   # del(delete) Toronto key and value\n",
+    "cities.pop('Toronto')  # 因为 Toronto 不存在，且没有给予默认值，报错\n",
+    "\n",
+    "print(cities) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "2d4e07b4-21a6-43ad-bdcf-3d4a35ce13c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Francisco\n",
+      "London\n",
+      "Paris\n",
+      "Beijing\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  在 Dict 做 for 循环时，默认遍历的是 key，而不是 value！\n",
+    "cities = {\n",
+    "    'San Francisco': 837442,\n",
+    "    'London': 8673713,\n",
+    "    'Paris': 837442,\n",
+    "    'Beijing': 0.1700000\n",
+    "}\n",
+    "\n",
+    "for keys in cities:    #或者 for key in cities.keys():\n",
+    "    print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2bbb1cf6-7c6a-45ba-96dd-77162e88379c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "837442\n",
+      "8673713\n",
+      "837442\n",
+      "0.17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 接上，如果想遍历 value\n",
+    "for values in cities.values():\n",
+    "    print(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a04206e9-7e1f-4d06-9c5c-fa68f1939cae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Francisco 837442\n",
+      "London 8673713\n",
+      "Paris 837442\n",
+      "Beijing 0.17\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 接上，如果想遍历 keys 和 values\n",
+    "for keys,values in cities.items():\n",
+    "    print(keys,values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "bee1d43a-8c0d-4441-850f-1a5d4b806ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Francisco -> 837442\n",
+      "London -> 8673713\n",
+      "Paris -> 837442\n",
+      "Beijing -> 0.17\n"
+     ]
+    }
+   ],
+   "source": [
+    "    #或者\n",
+    "for keys,values in cities.items():\n",
+    "    print(f'{keys} -> {values}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "650267e5-e76c-44e4-91b4-194f9967570f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities = {\n",
+    "    'San Francisco': {\n",
+    "        'lat': 37.77,\n",
+    "        'lon': -122.43,\n",
+    "        'airport': 'SFO'}\n",
+    "    }\n",
+    "print(cities['San Francisco']['lat'])  #字典中的字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "993db3e9-658b-4039-b75f-d50fbe77b669",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[7, 8, 9]\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 输出矩阵\n",
+    "my_list = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "print(my_list)\n",
+    "print(my_list[2])\n",
+    "\n",
+    "for i in my_list:    # 遍历my_list中的每一个元素\n",
+    "    print(i)\n",
+    "    \n",
+    "#观察两种输出方法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "1a98d7e6-a8f6-4aca-8eab-1c1fbdee9985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [4, 5, 6]\n",
+    "c = [7, 8, 9]\n",
+    "\n",
+    "for i in my_list:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "614c8063-5098-43c7-a213-faa3a5e47654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[1, 2, 3]\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "[4, 5, 6]\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "[7, 8, 9]\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 输出矩阵中的每个元素\n",
+    "a = [1, 2, 3]\n",
+    "b = [4, 5, 6]\n",
+    "c = [7, 8, 9]\n",
+    "\n",
+    "print(a[0])\n",
+    "\n",
+    "my_list = [a, b, c]\n",
+    "for i in my_list:\n",
+    "    print(f'{i}')\n",
+    "    for j in i:          # i 中嵌套的for循环 j   // remember that i is a list\n",
+    "        print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "34aa7669-c985-4c0b-84ea-eab8db7392e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 访问 “嵌套列表” （nested list）中的元素\n",
+    "a = [1, 2, 3]   # 第 0 行\n",
+    "b = [4, 5, 6]   # 第 1 行\n",
+    "c = [7, 8, 9]   # 第 2 行\n",
+    "\n",
+    "\n",
+    "# 3×3 Matrix\n",
+    "\n",
+    "i, j = 0, 1\n",
+    "print(my_list[i][j])     # 双索引 “第 i 行row、第 j 列column” 的值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "39485be3-e445-4a82-82b4-c0629e72e258",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 接上\n",
+    "print(my_list[i])\n",
+    "print(my_list[j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "943474f3-d932-48b4-8847-3a5c6f43cb04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London\n",
+      "51.5072\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lists of lists (LOLs)\n",
+    "my_cities = [\n",
+    "    ['London', [51.5072, 0.1275], +0],\n",
+    "    ['New York', [40.7127, 74.0059], -5],\n",
+    "    ['Tokyo', [35.6833, 139.6833], +8]\n",
+    "]\n",
+    "\n",
+    "print(my_cities[0][0])    # london\n",
+    "print(my_cities[0][1][0]) # lat\n",
+    "print(my_cities[0][2])  # 第0行，第2列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "dd2996a3-3959-4dfe-90f6-f5b5ebd362ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51.51, 40.71, 35.69]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOLs of Data\n",
+    "# 如果要输出所有的lat\n",
+    "ds1 = [\n",
+    "    ['lat', 'lon', 'name', 'tz'],\n",
+    "    [51.51, 0.13, 'London', +0],\n",
+    "    [40.71, 74.01, 'New York', -5],\n",
+    "    [35.69,139.68,'Tokyo', +8]\n",
+    "]\n",
+    "\n",
+    "lats = []\n",
+    "for row in ds1[1:]:\n",
+    "    lats.append(row[0])\n",
+    "\n",
+    "print(lats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "013a77c7-ec2d-4dfb-ba9f-5efc2b97e71d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51.51, 40.71, 35.69]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DOLs(dict of lists) of Data  (更适合提取数据，因为字典中的各list属性都一致：float\\lin\\string),因此运算更快\n",
+    "# 如果要输出所有的 lat\n",
+    "ds2 = {\n",
+    "    'lat': [51.51,40.71,35.69],\n",
+    "    'lon': [0.13,74.01,139.68],\n",
+    "    'tz' : [+0,-5,+8],\n",
+    "    'name':['London','New York','Tokyo']\n",
+    "}\n",
+    "lat = ds2['lat']\n",
+    "print(lat)   #或者直接print(ds2['lat'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "243079d8-3bf4-4111-a3cb-65ede64e48a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London\n",
+      "51.51\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 列表+索引 找元素\n",
+    "ds2 = {\n",
+    "    'lat': [51.51,40.71,35.69],\n",
+    "    'lon': [0.13,74.01,139.68],\n",
+    "    'tz' : [+0,-5,+8],\n",
+    "    'name':['London','New York','Tokyo']\n",
+    "}\n",
+    "\n",
+    "print(ds2['name'][0])\n",
+    "print(ds2['lat'][0])\n",
+    "print(ds2['tz'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "b41cbd36-ab6e-40c0-b525-ea62dadb58e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "The time zone of Tokyo is 8.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds2 = {\n",
+    "    'lat': [51.51,40.71,35.69],\n",
+    "    'lon': [0.13,74.01,139.68],\n",
+    "    'tz' : [+0,-5,+8],\n",
+    "    'name':['London','New York','Tokyo']\n",
+    "}\n",
+    "\n",
+    "city_name = 'Tokyo'\n",
+    "\n",
+    "city_index = ds2['name'].index(city_name)\n",
+    "print(city_index)     # 使得 输出city的index\n",
+    "\n",
+    "print(f'The time zone of {city_name} is {ds2['tz'][city_index]}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8968c72f-b656-46a7-a5cd-41929b44ad4c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
